[NI] Allow native access
Kotlin compiler uses `java.lang.System::load`, which native image
reports as a warning in the runtime. The warning is supposed to turn
into an error in the future releases unless allowed explicitly. This
commit allows it

^KT-89308 Fixed